--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Foreign Sound</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script defer src="threejs-script.js"></script>
@@ -12,6 +12,7 @@
             padding: 0;
             background-color: #f4f4f9;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            overflow-x: hidden;
         }
         .main-container {
             position: relative;
@@ -72,7 +73,18 @@
             font-weight: bold;
             letter-spacing: 1px;
             text-transform: uppercase;
-            white-space: nowrap;
+            padding: 0 20px;
+            word-wrap: break-word;
+            white-space: normal;
+            width: 100%;
+            box-sizing: border-box;
+        }
+        @media screen and (max-width: 768px) {
+            .text-container-p {
+                font-size: 8px;
+                letter-spacing: 0.5px;
+                line-height: 1.3;
+            }
         }
         .copyright-container {
             position: absolute;
