--- a/index.html
+++ b/index.html
@@ -102,6 +102,18 @@
             letter-spacing: 1px;
             text-transform: uppercase;
         }
+        .spotify-embed-container {
+            width: 56.4%;
+            margin: 0 auto;
+        }
+        @media screen and (max-width: 768px) {
+            .spotify-embed-container {
+                width: 85%;
+            }
+            iframe {
+                height: 500px !important;
+            }
+        }
     </style>
 </head>
 <body>
@@ -109,10 +121,12 @@
         <div id="three-container"></div>
     </div>
     <div class="spotify-container">
-        <p class="text-container-p">FOREIGN SOUND IS A FULL-SERVICE MUSIC COMPANY HELPING BOLD CREATIVES BREAK BORDERS AND BUILD GLOBAL CAREERS—NO MATTER WHERE THEY START.</p>
+        <p class="text-container-p">FOREIGN SOUND IS A FULL-SERVICE MUSIC MANAGEMENT COMPANY HELPING CREATIVES BREAK BORDERS AND BUILD GLOBAL CAREERS—NO MATTER WHERE THEY START.</p>
         <div style="height: 30px;"></div>
         <div class="releases-title">RELEASES:</div>
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0MHsop302IrC78xYW2JKJC?utm_source=generator&theme=0" width="56.4%" height="704" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <div class="spotify-embed-container">
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0MHsop302IrC78xYW2JKJC?utm_source=generator&theme=0" width="100%" height="600" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        </div>
     </div>
     <div class="copyright-container">
         <p class="copyright-text">FOREIGN SOUND 2025©</p>
