--- a/index.html
+++ b/index.html
@@ -106,12 +106,21 @@
             width: 56.4%;
             margin: 0 auto;
         }
+        .spotify-embed-mobile {
+            display: none;
+        }
+        .spotify-embed-desktop {
+            display: block;
+        }
         @media screen and (max-width: 768px) {
             .spotify-embed-container {
                 width: 85%;
             }
-            iframe {
-                height: 500px !important;
+            .spotify-embed-mobile {
+                display: block;
+            }
+            .spotify-embed-desktop {
+                display: none;
             }
         }
     </style>
@@ -125,7 +134,12 @@
         <div style="height: 30px;"></div>
         <div class="releases-title">RELEASES:</div>
         <div class="spotify-embed-container">
-            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0MHsop302IrC78xYW2JKJC?utm_source=generator&theme=0" width="100%" height="600" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            <div class="spotify-embed-desktop">
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0MHsop302IrC78xYW2JKJC?utm_source=generator&theme=0" width="100%" height="600" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            </div>
+            <div class="spotify-embed-mobile">
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0MHsop302IrC78xYW2JKJC?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            </div>
         </div>
     </div>
     <div class="copyright-container">
